# Flux

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  imgui.ini
Application/src/: MyApp.cpp
Core/: CMakeLists.txt
Core/src/: Application.cpp  Application.hpp
Flux/: CMakeLists.txt
Flux/Core/src/: Application.cpp  Application.hpp  ApplicationAndroid.cpp  ApplicationCommon.cpp  ApplicationDesktop.cpp  EntryPoint.cpp  Event.hpp  Flux.hpp  GLWrappers.cpp  GLWrappers.hpp  Image.cpp  Image.hpp  ImageAndroid.cpp  ImageDesktop.cpp  Layer.hpp  TimeStep.hpp
example/AndroidApplication/: CMakeLists.txt  ExampleApp.cpp  ExampleLayer.cpp  ExampleLayer.hpp  README.md  android_main.cpp
example/Application/: CMakeLists.txt
example/Application/src/: MyApp.cpp
example/DesktopApplication/src/: MyApp.cpp
example/FeatureTest/: FeatureTest.cpp
